--- a/project.yaml
+++ b/project.yaml
@@ -564,6 +564,19 @@ actions:
         table2: output/data/mean_bmi_traj_change_t2dm.csv
         table3: output/data/mean_bmi_traj_change_t1dm.csv
 
+
+  bmi_trajectory_change_summary_mentalhealth:
+    run: r:latest analysis/bmi_trajectory/trajectory_change/BMI_change_traj_summ_mentalhealthLD_groups.R --output-dir=output/data 
+    needs: [bmi_trajectory_change_summary]
+    outputs:
+      moderately_sensitive: 
+        table1: output/data/mean_bmi_traj_change_depression.csv
+        table2: output/data/mean_bmi_traj_change_learning_disability.csv
+        table3: output/data/mean_bmi_traj_change_psychosis_schiz_bipolar.csv
+
+
+
+
   bmi_trajectory_change_model_univariate: 
     run: r:latest analysis/BMI_change_diff_trajectories_univariate.R --output-dir=output/data 
     needs: [bmi_trajectory_change_summary]
