--- a/project.yaml
+++ b/project.yaml
@@ -553,6 +553,14 @@ actions:
         table2: output/data/weightgain_90th_univariate.csv
         table3: output/data/yearly_bmi_change_deciles.csv
 
+  bmi_gain_top_decile_age: 
+    run: r:latest analysis/bmi_trajectory/top_decile/top_decile_weightgain_age_adj.R --output-dir=output/data 
+    needs: [bmi_change_category_proportion_plots]
+    outputs:
+      moderately_sensitive: 
+        table1: output/data/weightgain_90th_age_adj.csv
+
+
 
 
 
