--- a/project.yaml
+++ b/project.yaml
@@ -567,8 +567,19 @@ actions:
       moderately_sensitive: 
         table1: output/data/weightgain_90th_sex_adj.csv
 
+  bmi_gain_top_decile_imd: 
+    run: r:latest analysis/bmi_trajectory/top_decile/top_decile_weightgain_imd_adj.R --output-dir=output/data 
+    needs: [bmi_change_category_proportion_plots]
+    outputs:
+      moderately_sensitive: 
+        table1: output/data/weightgain_90th_imd_adj.csv
 
-
+  bmi_gain_top_decile_eth: 
+    run: r:latest analysis/bmi_trajectory/top_decile/top_decile_weightgain_ethnicity_adj.R --output-dir=output/data 
+    needs: [bmi_change_category_proportion_plots]
+    outputs:
+      moderately_sensitive: 
+        table1: output/data/weightgain_90th_ethnicity_adj.csv
 
 
 ## change in BMI trajectory pre and post covid
