--- a/project.yaml
+++ b/project.yaml
@@ -581,6 +581,13 @@ actions:
       moderately_sensitive: 
         table1: output/data/weightgain_90th_ethnicity_adj.csv
 
+  bmi_gain_top_decile_agesex: 
+    run: r:latest analysis/bmi_trajectory/top_decile/top_decile_weightgain_agesex.R --output-dir=output/data 
+    needs: [bmi_change_category_proportion_plots]
+    outputs:
+      moderately_sensitive: 
+        table1: output/data/weightgain_90th_agesex_adj.csv
+
 
 ## change in BMI trajectory pre and post covid
   bmi_trajectory_change_summary: 
