--- a/project.yaml
+++ b/project.yaml
@@ -307,6 +307,16 @@ actions:
         table1: output/data/had_bmi_2019_21_comorbidity_models.csv
         table2: output/data/had_bmi_2019_21_comorbidity_models_counts.csv
 
+
+  had_bmi_2019_2021_proportions:
+    run: r:latest analysis/had_bmi_check/had_bmi_all_years_prop_chi.R --output-dir=output/data 
+    needs: [generate_complete_median_BMI_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/proportion_had_bmi_2019_2021.csv
+        table2: output/data/proportion_had_bmi_2019_2021_chisquare.csv
+
+
 ## check the output from the cohort extractor 'had_bmi'
 
   had_bmi_proportion_2019_check:
