--- a/project.yaml
+++ b/project.yaml
@@ -349,7 +349,13 @@ actions:
         table2: output/data/change_deciles_lowbmiexc.csv
         table3: output/data/change_90th_counts_lowbmiexc.csv
 
-
+  topdecile_bmi_change_age_adjusted:
+    run: r:latest analysis/bmi_trajectory/top_decile_change/top_decile_change_age_adjusted.R --output-dir=output/data 
+    needs: [bmi_trajectory_change_summary]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/change_90th_age_adjusted_lowbmiexc.csv
+        table2: output/data/change_90th_wald_age.csv
 
 
 
