--- a/project.yaml
+++ b/project.yaml
@@ -357,6 +357,13 @@ actions:
         table1: output/data/change_90th_age_adjusted_lowbmiexc.csv
         table2: output/data/change_90th_wald_age.csv
 
+  topdecile_bmi_change_sex_adjusted:
+    run: r:latest analysis/bmi_trajectory/top_decile_change/top_decile_change_sex_adjusted.R --output-dir=output/data 
+    needs: [bmi_trajectory_change_summary]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/change_90th_sex_adjusted_lowbmiexc.csv
+        table2: output/data/change_90th_wald_sex.csv
 
 
 ##################################################################
