--- a/project.yaml
+++ b/project.yaml
@@ -1193,7 +1193,16 @@ actions:
         table4: output/data/DWMP_eligible_5yr_data_T2DM.csv
         table5: output/data/DWMP_eligible_5yr_data_years.csv
 
-
+  obese_eligible_5yr_data:
+    run: r:latest analysis/DWMP_eligibility/Obese_5yr.R --output-dir=output/data 
+    needs: [generate_complete_median_BMI_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/obese_5yr_data_all.csv
+        table2: output/data/obese_5yr_data_hypertension.csv
+        table3: output/data/obese_5yr_data_T1DM.csv
+        table4: output/data/obese_5yr_data_T2DM.csv
+        table5: output/data/obese_5yr_data_years.csv
 
 ##################################################################
 ### >> HAD_SBP ANALYSIS
