--- a/project.yaml
+++ b/project.yaml
@@ -1340,4 +1340,5 @@ actions:
     outputs:
       highly_sensitive:
         table1: output/data/imputation_dataframe.csv
-  
+        table2: output/data/BMI_sample_for_impute.csv
+        table3: output/data/BMI_sample_missing.csv
