--- a/project.yaml
+++ b/project.yaml
@@ -1342,3 +1342,10 @@ actions:
         table1: output/data/imputation_dataframe.csv
         table2: output/data/imputation_DF_for_impute.csv
         table3: output/data/imputation_sample_missing.csv
+  
+  MICE_data_3:
+    run: r:latest analysis/sensitivity_analyses/MICE_data_prep3.R --output-dir=output/data --output-format feather
+    needs: [MICE_data_2]
+    outputs:
+      highly_sensitive:
+        table1: output/data/imputation_univariate.csv
