--- a/project.yaml
+++ b/project.yaml
@@ -1347,5 +1347,5 @@ actions:
     run: r:latest analysis/sensitivity_analyses/MICE_data_prep3.R --output-dir=output/data --output-format feather
     needs: [MICE_data_2]
     outputs:
-      highly_sensitive:
+      moderately_sensitive:
         table1: output/data/imputation_univariate.csv
