--- a/project.yaml
+++ b/project.yaml
@@ -415,6 +415,14 @@ actions:
         table1: output/data/had_bmi_2019_21_models_1_counts.csv
         table2: output/data/had_bmi_2019_21_models_1_demographics.csv
 
+  had_bmi_2019_2021_models1_counts_round:
+    run: r:latest analysis/had_bmi_check/had_bmi_models_counts_round.R --output-dir=output/data 
+    needs: [had_bmi_2019_2021_models1_counts]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/had_bmi_2019_21_models_1_demographics_round.csv
+
+
   had_bmi_2019_2021_models_comorbidities:
     run: r:latest analysis/had_bmi_check/had_bmi_all_years_comorbidities_models.R --output-dir=output/data 
     needs: [generate_complete_median_BMI_data]
