--- a/project.yaml
+++ b/project.yaml
@@ -926,7 +926,12 @@ actions:
         table2: output/data/weightgain_lowbmiexc_90th_univariate.csv
         table3: output/data/yearly_lowbmiexc_bmi_change_deciles.csv
 
-
+  bmi_gain_top_decile_lowbmiexc_age: 
+    run: r:latest analysis/bmi_trajectory/top_decile/top_decile_weightgain_lowbmiexc_age.R --output-dir=output/data 
+    needs: [bmi_change_category_proportion_plots]
+    outputs:
+      moderately_sensitive: 
+        table1: output/data/weightgain_lowbmiexc_90th_age_adj.csv
 
 
 ## change in BMI trajectory pre and post covid
