positive bmi traj change proportions

--- a/project.yaml
+++ b/project.yaml
@@ -963,6 +963,18 @@ actions:
         chart1: output/change_bmi_trajectories.png
         chart2: output/change_bmi_trajectories_counts.png
 
+  bmi_positive_trajectory_change_proportion: 
+    run: r:latest analysis/bmi_trajectory/bmi_trajectory_positive_change_prop.R --output-dir=output/data 
+    needs: [bmi_trajectory_change_summary]
+    outputs:
+      moderately_sensitive: 
+        table1: output/data/bmi_trajectory_positive_change_proportions.csv
+ 
+
+
+
+
+
   bmi_trajectory_change_summary_DWMP:
     run: r:latest analysis/BMI_change_diff_traj_summ_DWMP_groups.R --output-dir=output/data 
     needs: [bmi_trajectory_change_summary]
